# clipd

./: .gitattributes  .gitignore  B7-CHECKLIST.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  HANDOVER.md  LIMITATIONS.md  M2-HARDWARE-TESTS.md  M5-PLAN.md  M7-M8-PLAN.md  README.md  SECURITY.md  UI-PASS-PLAN.md  UI-REDESIGN-CODE-REVIEW.md  UI-REDESIGN-HW-TESTS.md  deny.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
clipper-devpack/devpack/: 00-README.md  01-PROJECT-PLAN.md  02-AV-SYNC-SPEC.md  04-TEST-MACHINE.md  05-MILESTONE-TRACKER.md  06-SAFETY-AND-VMS.md  07-DEVFLOW.md  08-FEATURE-COMPLETE.md  09-NAME-AND-GTM.md
docs/: DECISIONS.md  HANDOVER.md  README.md
docs/plans/: M2-HARDWARE-TESTS.md  M3-PLAN.md  M4-PLAN.md  M7-M8-PLAN.md  SLICE-B-PLAN.md  UI-RESEARCH.md
spikes/mf_h264_encoder/: Cargo.toml  README.md
spikes/mf_h264_encoder/src/: main.rs
spikes/sinkwriter_mux_spike/: Cargo.toml  README.md
spikes/sinkwriter_mux_spike/src/: main.rs
spikes/wasapi_audio_spike/: Cargo.toml  README.md
spikes/wasapi_audio_spike/src/: main.rs
spikes/wgc_capture_spike/: Cargo.toml  README.md
spikes/wgc_capture_spike/src/: main.rs
src/: appfolder.rs  autostart.rs  clock.rs  com.rs  config.rs  console.rs  engine.rs  gpu.rs  hotkey.rs  lib.rs  logging.rs  main.rs  ring.rs  save.rs  spec_constants.rs  status.rs  ui.rs  watchdog.rs
src/audio/: binding.rs  devices.rs  drift.rs  gaps.rs  levels.rs  mixer.rs  mod.rs  process_loopback.rs  resample.rs  wasapi_stream.rs
src/capture/: canvas.rs  convert.rs  mod.rs  pacing.rs  resize.rs  wgc.rs
src/encode/: mft_aac.rs  mft_h264.rs  mod.rs
src/mux/: fmp4.rs  mod.rs  sinkwriter.rs
src/ui/: folder_dialog.rs  mod.rs  notify.rs  pill.rs  recent.rs  settings.rs  sound.rs  theme.rs  tray.rs  window_state.rs
testlogs/2026-07-10/: SUMMARY.md
tests/: smoke.rs
tools/audio-probe/: Cargo.toml
tools/audio-probe/src/: main.rs
tools/avrig/: Cargo.toml
tools/avrig/src/: analysis.rs  generator.rs  main.rs  measure.rs
tools/calibration/: README.md  t0_sweep.ps1
tools/verify/: Cargo.toml
tools/verify/src/: checks.rs  main.rs  probe.rs
