[package]
name = "clipd"
version = "0.0.0"
edition = "2021"
rust-version = "1.95"
description = "Single-binary native Windows replay-buffer clipper (screen → in-memory ring buffer → hotkey clip)"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ImTani/clipd"
publish = false

[lib]
name = "clipd"
path = "src/lib.rs"

[[bin]]
name = "clipd"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5.15"
# Global save/record hotkeys (M3): RegisterHotKey via the polite OS API — NOT a
# low-level keyboard hook (CLAUDE.md hard-constraint 5; 01-PROJECT-PLAN §2).
# Whitelisted (CLAUDE.md rule 2).
global-hotkey = "0.7.0"
# Audio capture (M2): raw WASAPI loopback + mic, event-driven, per-packet QPC
# position (01-PROJECT-PLAN §2 mandates `wasapi`, NOT cpal). Whitelisted
# (CLAUDE.md rule 2). Same version proven by spikes/wasapi_audio_spike.
wasapi = "0.23.0"
# Audio resampling (M2): device-native → 48 kHz with a variable ratio driven by
# the drift controller (02-AV-SYNC-SPEC §2.4, sinc fixed-in/variable-ratio).
# Whitelisted (CLAUDE.md rule 2).
rubato = "0.16.2"
# `windows-core` is the core of the already-whitelisted `windows` crate (which
# re-exports it as `windows::core`); named explicitly only so the `#[implement]`
# macro's generated `::windows_core::` paths resolve for the §7
# IMMNotificationClient sink (audio/devices.rs). Same 0.62.2 already in the tree,
# no new code. See DECISIONS.md 2026-07-04 "M2 Task 6".
windows-core = "0.62.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# Rotating on-disk log (M5): daily-rolled file in %LOCALAPPDATA%\clipd\logs so
# "why didn't my clip save" is answerable (01-PROJECT-PLAN §2). Whitelisted
# (CLAUDE.md rule 2). Non-blocking writer; its WorkerGuard is held in main().
tracing-appender = "0.2.3"
windows = { version = "0.62.2", features = [
    "Win32_System_Performance",
    # gpu.rs — shared D3D11 device + DXGI adapter topology (Task A / M1).
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # IDXGIOutput6::GetDesc1 is gated on Gdi (DXGI_OUTPUT_DESC1 carries an HMONITOR).
    "Win32_Graphics_Gdi",
    # com.rs — MTA apartment guard (Task B / M1).
    "Win32_System_Com",
    # capture/wgc.rs — Windows Graphics Capture + WinRT interop bridges (Task B).
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    # com.rs (MediaFoundation guard) + encode/mft_h264.rs — async H.264 MFT + CQP (Task E).
    "Win32_Media_MediaFoundation",
    # audio/devices.rs — IMMNotificationClient default-follow watcher (§7, Task 6).
    "Win32_Media_Audio",
    # VARIANT (for ICodecAPI::SetValue CQP) needs Variant (VARENUM/VT_*) + Ole + Com.
    "Win32_System_Variant",
    "Win32_System_Ole",
    # hotkey.rs — the Win32 message pump for the global-hotkey RegisterHotKey
    # window (GetMessageW/DispatchMessageW/PostThreadMessageW/WM_QUIT, M3) plus
    # GetCurrentThreadId to target the pump thread for a clean quit.
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[dev-dependencies]

# --- Profiles (07-DEVFLOW.md §1) ---
# Profiles must live in Cargo.toml (cargo does not read them from
# .cargo/config.toml); the linker choice that §1 also mentions lives in
# .cargo/config.toml. See DECISIONS.md.

[profile.dev]
# Line tables only — fast native (COM/D3D) debugging without full debuginfo cost.
debug = 1

[profile.dev.package."*"]
# Optimize dependencies (notably the `windows` crate) even in dev so they are
# not rebuilt in molasses mode. 07-DEVFLOW.md §1.
opt-level = 1

[profile.release]
# Binary budget is < 10 MB (01-PROJECT-PLAN.md §1); the `just release` recipe
# prints the built size against it.
opt-level = 3
lto = true
codegen-units = 1
strip = true
# NOTE: no `panic = "abort"`. CLAUDE.md requires worker-thread panics to be
# caught at the thread boundary (catch_unwind) and routed to the watchdog, which
# needs unwinding to remain enabled.
