[package]
name = "clipd"
version = "0.0.0"
edition = "2021"
rust-version = "1.95"
description = "Single-binary native Windows replay-buffer clipper (screen → in-memory ring buffer → hotkey clip)"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/ImTani/clipd"
publish = false

[lib]
name = "clipd"
path = "src/lib.rs"

[[bin]]
name = "clipd"
path = "src/main.rs"

[dependencies]
crossbeam-channel = "0.5.15"
# Global save/record hotkeys (M3): RegisterHotKey via the polite OS API — NOT a
# low-level keyboard hook (CLAUDE.md hard-constraint 5; 01-PROJECT-PLAN §2).
# Whitelisted (CLAUDE.md rule 2).
global-hotkey = "0.7.0"
# Audio capture (M2): raw WASAPI loopback + mic, event-driven, per-packet QPC
# position (01-PROJECT-PLAN §2 mandates `wasapi`, NOT cpal). Whitelisted
# (CLAUDE.md rule 2). Same version proven by spikes/wasapi_audio_spike.
wasapi = "0.23.0"
# Audio resampling (M2): device-native → 48 kHz with a variable ratio driven by
# the drift controller (02-AV-SYNC-SPEC §2.4, sinc fixed-in/variable-ratio).
# Whitelisted (CLAUDE.md rule 2).
rubato = "0.16.2"
# `windows-core` is the core of the already-whitelisted `windows` crate (which
# re-exports it as `windows::core`); named explicitly only so the `#[implement]`
# macro's generated `::windows_core::` paths resolve for the §7
# IMMNotificationClient sink (audio/devices.rs). Same 0.62.2 already in the tree,
# no new code. See DECISIONS.md 2026-07-04 "M2 Task 6".
windows-core = "0.62.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
toml = "1.1.2"
# Format-preserving TOML writer (M7 Slice A / A1): the config-rewrite path must
# preserve user comments and unknown keys (01-PROJECT-PLAN §3 pitfall 30) — the
# `toml` serializer cannot, it emits a fresh document. `toml_edit` edits the
# on-disk document in place, touching only known keys. Read/validate still go
# through `toml` (serde) into the single typed `Config`; `toml_edit` is only the
# write serializer, not a second schema representation. Whitelisted by the
# M7-M8-PLAN §0.4 amendment ("toml_edit joins the whitelist when the config-
# rewrite task lands"); see DECISIONS.md 2026-07-07 "A1 toml_edit". No `serde`
# feature — fields are applied explicitly, not derived.
toml_edit = "0.25.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# Rotating on-disk log (M5): daily-rolled file in %LOCALAPPDATA%\clipd\logs so
# "why didn't my clip save" is answerable (01-PROJECT-PLAN §2). Whitelisted
# (CLAUDE.md rule 2). Non-blocking writer; its WorkerGuard is held in main().
tracing-appender = "0.2.3"
windows = { version = "0.62.2", features = [
    "Win32_System_Performance",
    # gpu.rs — shared D3D11 device + DXGI adapter topology (Task A / M1).
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    # IDXGIOutput6::GetDesc1 is gated on Gdi (DXGI_OUTPUT_DESC1 carries an HMONITOR).
    "Win32_Graphics_Gdi",
    # com.rs — MTA apartment guard (Task B / M1).
    "Win32_System_Com",
    # capture/wgc.rs — Windows Graphics Capture + WinRT interop bridges (Task B).
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_System_WinRT_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
    # com.rs (MediaFoundation guard) + encode/mft_h264.rs — async H.264 MFT + CQP (Task E).
    "Win32_Media_MediaFoundation",
    # audio/devices.rs — IMMNotificationClient default-follow watcher (§7, Task 6).
    "Win32_Media_Audio",
    # VARIANT (for ICodecAPI::SetValue CQP) needs Variant (VARENUM/VT_*) + Ole + Com.
    "Win32_System_Variant",
    "Win32_System_Ole",
    # hotkey.rs — the Win32 message pump for the global-hotkey RegisterHotKey
    # window (GetMessageW/DispatchMessageW/PostThreadMessageW/WM_QUIT, M3) plus
    # GetCurrentThreadId to target the pump thread for a clean quit; ui.rs shares
    # the pump (PeekMessageW/TranslateMessage/DispatchMessageW, M5).
    "Win32_UI_WindowsAndMessaging",
    # audio/process_loopback.rs (B2) — OpenProcess/WaitForSingleObject PID-liveness
    # watchdog for process-loopback capture (a dead target process delivers silence
    # forever with no WASAPI error, so we detect exit ourselves). hotkey.rs also uses
    # this feature's message-pump threading.
    "Win32_System_Threading",
    # audio/process_loopback.rs (B2) — RtlGetVersion (ntdll) + OSVERSIONINFOW to probe
    # the OS build for the Win10 2004 process-loopback floor (GetVersionEx lies without
    # an app manifest we do not ship).
    "Wdk_System_SystemServices",
    "Win32_System_SystemInformation",
    # audio/binding.rs (B3) — CreateToolhelp32Snapshot/Process32FirstW/Process32NextW to
    # scan running processes for the voice-chat detector (by image name, never by
    # window). GetForegroundWindow/GetWindowRect/GetWindowThreadProcessId (in
    # Win32_UI_WindowsAndMessaging, already on) + MonitorFromWindow/GetMonitorInfoW (in
    # Win32_Graphics_Gdi, already on) drive the monitor-mode foreground-fullscreen game
    # detector.
    "Win32_System_Diagnostics_ToolHelp",
    # autostart.rs — the one permitted registry write: the HKCU Run key toggle
    # (M5; CLAUDE.md constraint 5 / 06-SAFETY-AND-VMS.md).
    "Win32_System_Registry",
    # ui/tray.rs (U9) — Shell_NotifyIconW (NIM_ADD/MODIFY/DELETE + NIF_INFO) to raise the
    # save-complete / save-failed tray balloon (our no-overlay analogue of the incumbents'
    # "Clip Saved" toast); ui/folder_dialog.rs (U10) — IFileOpenDialog (FOS_PICKFOLDERS)
    # for the Output-folder Browse… button. Both are confined-unsafe COM/Shell wrappers.
    "Win32_UI_Shell",
    # ui/folder_dialog.rs (U10) — CoCreateInstance/CoTaskMemFree for the IFileOpenDialog.
    "Win32_System_Com",
    # ui/notify.rs (T1) — GetModuleHandleW for the hidden notification window's class
    # (RegisterClassW/CreateWindowExW live in Win32_UI_WindowsAndMessaging, already on).
    "Win32_System_LibraryLoader",
] }
# Tray icon + native menu (M5): the shell surface (01-PROJECT-PLAN §2). Whitelisted
# (CLAUDE.md rule 2; pulls `muda` transitively for the menu). default-features=false
# drops the Linux (libxdo/gtk/libappindicator) + PNG bits — icons are built from RGBA
# in `ui.rs`, so no image decoder is linked. NO `common-controls-v6`: that feature
# makes muda import v6-only comctl32 functions, which require an embedded application
# manifest we don't ship — without it the loader fails at startup
# (STATUS_ENTRYPOINT_NOT_FOUND). Classic menu styling needs no manifest and no extra
# build tooling. See DECISIONS.md 2026-07-06 "M5 T2 fixup".
tray-icon = { version = "0.24.1", default-features = false }
# egui/eframe — the settings window (M7 Slice A / A2), the ONLY UI-module deps
# (CLAUDE.md "UI rules": egui/eframe sanctioned for `ui` alone). Satellite: the
# window runs eframe on its own thread, lazily spawned from the tray; the engine
# never links against or blocks on it. default-features=false drops the glow
# alternative (wgpu), Linux backends (wayland/x11), accesskit, and eframe's
# persistence storage — we keep only the glow renderer + bundled fonts. Config is
# written exclusively through `config.rs` (A1 `write_atomic`), never eframe
# storage. See DECISIONS.md 2026-07-07 "A2 eframe".
eframe = { version = "0.35.0", default-features = false, features = [
    "glow",
    "default_fonts",
] }
# winit — used ONLY for `EventLoopBuilderExtWindows::with_any_thread`, so the
# settings window can run its winit event loop on its OWN thread while the tray
# keeps the main-thread message pump (satellite law). eframe re-exports the
# `EventLoopBuilder` type but not the platform ext trait, so this is a direct
# dep, version-pinned to the exact winit eframe already resolves (0.30.13) so
# cargo unifies to a single winit and the trait applies to eframe's builder. A
# UI-module-only dep, tightly coupled to eframe. See DECISIONS.md 2026-07-07
# "A2 eframe".
winit = "=0.30.13"

[dev-dependencies]
assert_cmd = "2.2.2"

# --- Profiles (07-DEVFLOW.md §1) ---
# Profiles must live in Cargo.toml (cargo does not read them from
# .cargo/config.toml); the linker choice that §1 also mentions lives in
# .cargo/config.toml. See DECISIONS.md.

[profile.dev]
# Line tables only — fast native (COM/D3D) debugging without full debuginfo cost.
debug = 1

[profile.dev.package."*"]
# Optimize dependencies (notably the `windows` crate) even in dev so they are
# not rebuilt in molasses mode. 07-DEVFLOW.md §1.
opt-level = 1

[profile.release]
# Binary budget is < 10 MB (01-PROJECT-PLAN.md §1); the `just release` recipe
# prints the built size against it.
opt-level = 3
lto = true
codegen-units = 1
strip = true
# NOTE: no `panic = "abort"`. CLAUDE.md requires worker-thread panics to be
# caught at the thread boundary (catch_unwind) and routed to the watchdog, which
# needs unwinding to remain enabled.
