# Milestone-0 spike #2 — WGC primary-monitor capture (fps + texture format).
#
# THROWAWAY, STANDALONE crate (see spikes/mf_h264_encoder/Cargo.toml for the
# rationale behind the empty `[workspace]` detachment and the free dev-deps).

[workspace]

[package]
name = "wgc_capture_spike"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "wgc_capture_spike"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Only the feature gates whose APIs this spike calls (no blanket features).
# WinRT (Graphics_*) for WGC + the Win32_System_WinRT_* interop bridges.
windows = { version = "0.62.2", features = [
    "Foundation",
    "Graphics",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
] }

[profile.dev]
debug = 1

[profile.dev.package."*"]
opt-level = 1
